lesson5/deployment-pg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-db
  namespace: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pg-db
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pg-storage
