lesson5/deployment_probes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-probe
spec:   
  replicas: 1
  selector:
    matchLabels:
      app: app-probe
  template:
    metadata:
      labels:
        app: app-probe
    spec:
      containers:
      - image: nginx:1.20
        name: nginx
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
          initialDelaySeconds: 10
