lesson5/service_clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-iservice
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: app-probe
  type: ClusterIP
