lesson5/hw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
        name: my-ingress
        annotation:
                nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:           
        rules:
            -host: hello-world.info
            http:
                    paths:
                          -path: /
                           pathtape: Prefix
                           backend:
                               service:
                                   name: web2
                                   port:
                                      number: 8080
